# bromcom-timetamble-formatter

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  RELEASE_NOTES_v0.1.0.md  SECURITY.md  SUPPORT.md  config.toml
.github/: copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/prompts/: add-educational-comments.prompt.md  cleanup-after-pr.prompt.md  investigate-issues.prompt.md  update-dependencies.prompt.md  write-coding-standards-from-file.prompt.md
.github/workflows/: ci.yml  pages.yml  release.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/tests/: cli_parse_tests.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  lib.rs  parser.rs  processor.rs  renderer.rs
crates/core/tests/: render_tests.rs
docs/: README.md  TODO.md  index.html  style.css
examples/: README.md
scripts/: anonymize_pdf.py
