[package]
name = "timetable_cli"
version = "0.1.0"
edition = "2021"
description = "Command-line tool for parsing Bromcom PDF timetables and generating formatted SVG visualizations"
license = "MIT"
repository = "https://github.com/RichardSlater/bromcom-timetable-formatter"
authors = ["Richard Slater <richard@richard-slater.co.uk>"]
keywords = ["pdf", "timetable", "svg", "bromcom", "cli"]
categories = ["command-line-utilities", "visualization"]

[dependencies]
timetable_core = { path = "../core" }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
