[package]
name = "timetable_core"
version = "0.1.0"
edition = "2021"
description = "Core library for parsing Bromcom PDF timetables and generating formatted SVG visualizations with color-coded department maps"
license = "MIT"
repository = "https://github.com/RichardSlater/bromcom-timetable-formatter"
authors = ["Richard Slater <richard@richard-slater.co.uk>"]
keywords = ["pdf", "timetable", "svg", "bromcom", "education"]
categories = ["parsing", "visualization"]

[dependencies]
lopdf = "0.38"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
svg = "0.18"
roxmltree = "0.21"
thiserror = "2.0"
regex = "1.11"
chrono = "0.4"

[dev-dependencies]
pretty_assertions = "1.3"
